--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,11 @@
       <div class="centro"></div>
       <div class="abajo"></div>
     </div>
+    <input
+      type="button"
+      id="button"
+      value="Cambia la carta!"
+      onClick="location.href=location.href"
+    />
   </body>
 </html>
